# RF62X-Protocol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/reciever/: CMakeLists.txt  datareciever.c  datareciever.h  main.c
examples/sender/: CMakeLists.txt  datasender.c  datasender.h  main.c
src/: CMakeLists.txt  RF62Xchannel.c  RF62Xchannel.h  RF62Xmsg.c  RF62Xmsg.h  RF62Xparser.c  RF62Xparser.h  RF62Xtypes.h  smartchannel.c  smartchannel.h  smartmsg.c  smartmsg.h  smartparser.c  smartparser.h  smartutils.c  smartutils.h  udpport.c  utils.c  utils.h
